<resources>
    <string name="app_name">Ghost</string>

    <string name="title_activity_game">Game</string>
    <string name="title_activity_win">Game Over</string>
    <string name="title_activity_reset">What do you want to do?</string>

    <string name="init_text">Welcome to Ghost! Because this is your first time, we have some initial setup to do.</string>
    <string name="init_started_text">We are now setting up your app for an optimal user experience. This may take a minute.</string>
    <string name="begin_init">Begin initialization</string>

    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="continue_game">Continue Game</string>
    <string name="reset_prompt">There\'s still a game in progress. What do you want to do?</string>
    <string name="reset_prompt_highscores">What do you want to do?</string>
    <string name="back_to_highscores">Back to highscores</string>

    <string name="bullshit_button">Bullshit!</string>
    <string name="guess_button">Submit!</string>
    <string name="guess_field_hint">Your letter</string>

    <string name="name_1_hint">Player 1 Name</string>
    <string name="name_2_hint">Player 2 Name</string>
    <string name="start_button">Start Game</string>
    <string name="language">Pick Language</string>

    <string name="form_english">English</string>
    <string name="form_dutch">Dutch</string>

    <string name="toast_same_names">Players can\'t have the same name.</string>
    <string name="toast_no_name">Name field is empty.</string>
    <string name="toast_no_input">You didn\'t give input.</string>
    <string name="toast_invalid_input">Only input letters.</string>
    <string name="toast_created_word">This is a word!</string>
    <string name="toast_no_words_left">Can\'t make words with this!</string>
    <string name="toast_words_available">There were still words available</string>
    <string name="toast_one_word_available">There was still one word possible</string>
    <string name="toast_default">An unexpected problem occurred</string>
</resources>
