<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenuActivity">


    <AutoCompleteTextView android:id="@+id/name1Picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/name2Picker"

        android:hint="@string/name_1_hint"
        android:completionThreshold="1"
        android:maxLength="10" />

    <AutoCompleteTextView android:id="@+id/name2Picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/languagePicker"

        android:hint="@string/name_2_hint"
        android:completionThreshold="1"
        android:maxLength="10" />

    <Spinner android:id="@+id/languagePicker"
        android:layout_above="@+id/startGameButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:prompt="@string/language"
        android:entries="@array/formLanguagelist" />

    <Button android:id="@+id/startGameButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"

        android:text="@string/start_button"
        android:onClick="startGame" />
</RelativeLayout>
