<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nl.mprog.ghost.ghost.ResetActivity">

    <TextView android:id="@+id/messageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/reset_prompt"
        android:textStyle="bold"
        android:gravity="center" />

    <Button android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messageTextView"
        android:layout_centerHorizontal="true"

        android:text="@string/continue_game"
        android:onClick="continueGame"/>

    <Button android:id="@+id/newGameButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/continueButton"
        android:layout_centerHorizontal="true"

        android:text="@string/new_game"
        android:onClick="newGame"/>
</RelativeLayout>
