<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nl.mprog.ghost.ghost.GameActivity">

    <View android:id="@+id/fakeView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"/>

    <TextView android:id="@+id/name1Field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/fakeView"
        android:layout_alignEnd="@id/fakeView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView android:id="@+id/name2Field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/fakeView"
        android:layout_alignStart="@id/fakeView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp" />

    <TextView android:id="@+id/wordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name1Field"
        android:layout_centerHorizontal="true"

        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />


    <EditText android:id="@+id/guessField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wordField"
        android:layout_centerHorizontal="true"

        android:hint="@string/guess_field_hint"
        android:maxLength="1" />

    <Button android:id="@+id/guessButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/guessField"
        android:layout_toEndOf="@+id/guessField"
        android:layout_below="@+id/wordField"

        android:text="@string/guess_button"
        android:onClick="guess" />

    <Button android:id="@+id/bullshitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/guessField"
        android:layout_toStartOf="@+id/guessField"
        android:layout_below="@+id/wordField"

        android:onClick="checkWinner"
        android:text="@string/bullshit_button" />

</RelativeLayout>
